--- a/main/plugins/org.talend.libraries.apache.kafka/plugin.xml
+++ b/main/plugins/org.talend.libraries.apache.kafka/plugin.xml
@@ -101,9 +101,9 @@
             mvn_uri="mvn:org.scala-lang/scala-library/2.11.12"/>
         <libraryNeeded
             context="plugin:com.typesafe.scala-logging"
-            id="scala-logging-2.11-3.7.2.jar"
-            name="scala-logging-2.11-3.7.2.jar" 
-            mvn_uri="mvn:com.typesafe.scala-logging/scala-logging-2.11/3.7.2"/>
+            id="scala-logging_2.11-3.7.2.jar"
+            name="scala-logging_2.11-3.7.2.jar" 
+            mvn_uri="mvn:com.typesafe.scala-logging/scala-logging_2.11/3.7.2"/>
         <libraryNeeded
             context="plugin:org.xerial.snappy"
             id="snappy-java-1.1.7.1.jar"
@@ -223,7 +223,7 @@
                 name="KAFKA-LIB-2_11-1_1_0">
             <library id="kafka_2.11-1.1.0.jar"/>
             <library id="scala-library-2.11.12.jar"/>
-            <library id="scala-logging-2.11-3.7.2.jar"/>
+            <library id="scala-logging_2.11-3.7.2.jar"/>
             <library id="jackson-core-2.9.4.jar"/>
             <library id="jackson-databind-2.9.4.jar"/>
             <library id="jackson-annotations-2.9.4.jar"/>
