--- a/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
@@ -153,7 +153,7 @@
             context="plugin:org.talend.libraries.apache.cxf"
             id="cxf-bundle-jaxrs-2.7.18.jar"
             name="cxf-bundle-jaxrs-2.7.18.jar"
-            mvn_uri="mvn:org.talend.libraries/cxf-bundle-jaxrs-2.7.18/6.0.0"
+            mvn_uri="mvn:org.apache.cxf/cxf-bundle-jaxrs/2.7.18"
             uripath="platform:/plugin/org.talend.libraries.apache.cxf/lib/cxf-bundle-jaxrs-2.7.18.jar">
         </libraryNeeded>
         <libraryNeeded
