--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -34,6 +34,19 @@
         	name="libthrift-0.9.3.jar"
         	mvn_uri="mvn:org.talend.libraries/libthrift-0.9.3/6.3.0"/>
         	
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr5150"
+            id="hadoop-hdfs-client-2.8.3-amzn-1.jar"
+            name="hadoop-hdfs-client-2.8.3-amzn-1.jar"
+            mvn_uri="mvn:org.talend.libraries/hadoop-hdfs-client-2.8.3-amzn-1.jar/6.0.0"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh5120"
+            id="htrace-core4-4.0.1-incubating.jar"
+            name="htrace-core4-4.0.1-incubating.jar"
+            mvn_uri="mvn:org.apache.htrace/htrace-core4/4.0.1-incubating">
+        </libraryNeeded>            
+        	
         <!-- Azure libraries -->
         <libraryNeeded
         	context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -1372,7 +1385,7 @@
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="httpcore-4.4.9.jar"
             name="httpcore-4.4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/httpcore-4.4.9/6.3.0"/>
+            mvn_uri="mvn:org.apache.httpcomponents/httpcore/4.4.9"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -1405,7 +1418,7 @@
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="httpclient-4.5.5.jar"
             name="httpclient-4.5.5.jar"
-            mvn_uri="mvn:org.talend.libraries/httpclient-4.5.5/6.0.0"/>
+            mvn_uri="mvn:org.apache.httpcomponents/httpclient/4.5.5"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -1749,6 +1762,7 @@
              <library id="hadoop-common-2.8.3-amzn-1.jar"/>
              <library id="hadoop-hdfs-2.8.3-amzn-1.jar"/>
              <library id="hadoop-auth-2.8.3-amzn-1.jar"/>
+             <library id="hadoop-hdfs-client-2.8.3-amzn-1.jar"/>
              <library id="commons-configuration-1.6.jar"/>
              <library id="commons-lang-2.6.jar"/>
              <library id="commons-logging-1.1.3.jar"/>
@@ -1770,6 +1784,7 @@
              <library id="avro-1.7.7.jar"/>
              <library id="jackson-mapper-asl-1.9.14-TALEND.jar"/>
              <library id="jackson-core-asl-1.9.14-TALEND.jar"/>
+             <library id="htrace-core4-4.0.1-incubating.jar"/>
         </libraryNeededGroup>
 
         <!-- S3 group -->
