--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -100,51 +100,39 @@
         <!-- HBase libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="hbase-common-1.3.1.jar"
-            name="hbase-common-1.3.1.jar"
-            mvn_uri="mvn:org.talend.libraries/hbase-common-1.3.1/6.0.0"/>
+            id="hbase-common-1.4.4.jar"
+            name="hbase-common-1.4.4.jar"
+            mvn_uri="mvn:org.apache.hbase/hbase-common/1.4.4"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="hbase-client-1.3.1.jar"
-            name="hbase-client-1.3.1.jar"
-            mvn_uri="mvn:org.talend.libraries/hbase-client-1.3.1/6.0.0"/>
+            id="hbase-client-1.4.4.jar"
+            name="hbase-client-1.4.4.jar"
+            mvn_uri="mvn:org.apache.hbase/hbase-client/1.4.4"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="hbase-protocol-1.3.1.jar"
-            name="hbase-protocol-1.3.1.jar"
-            mvn_uri="mvn:org.talend.libraries/hbase-protocol-1.3.1/6.0.0"/>
+            id="hbase-protocol-1.4.4.jar"
+            name="hbase-protocol-1.4.4.jar"
+            mvn_uri="mvn:org.apache.hbase/hbase-protocol/1.4.4"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="hbase-server-1.3.1.jar"
-            name="hbase-server-1.3.1.jar"
-            mvn_uri="mvn:org.talend.libraries/hbase-server-1.3.1/6.0.0"/>
+            id="hbase-server-1.4.4.jar"
+            name="hbase-server-1.4.4.jar"
+            mvn_uri="mvn:org.apache.hbase/hbase-server/1.4.4"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="hbase-hadoop-compat-1.3.1.jar"
-            name="hbase-hadoop-compat-1.3.1.jar"
-            mvn_uri="mvn:org.talend.libraries/hbase-hadoop-compat-1.3.1/6.0.0"/>
+            id="hbase-hadoop-compat-1.4.4.jar"
+            name="hbase-hadoop-compat-1.4.4.jar"
+            mvn_uri="mvn:org.apache.hbase/hbase-hadoop-compat/1.4.4"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="netty-all-4.0.23.Final.jar"
-            name="netty-all-4.0.23.Final.jar"
-            mvn_uri="mvn:org.talend.libraries/netty-all-4.0.23.Final/6.0.0"/>
-            
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="netty-all-4.0.43.Final.jar"
-            name="netty-all-4.0.43.Final.jar"
-            mvn_uri="mvn:org.talend.libraries/netty-all-4.0.43.Final/6.0.0"/>
-
-		<libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="netty-all-4.0.43.Final.jar"
-            name="netty-all-4.0.43.Final.jar"
-            mvn_uri="mvn:org.talend.libraries/netty-all-4.0.43.Final/6.0.0"/>
+            id="netty-all-4.1.17.Final.jar"
+            name="netty-all-4.1.17.Final.jar"
+            mvn_uri="mvn:io.netty/netty-all/4.1.17.Final"/>
 
         <!-- Hive libraries -->
         <libraryNeeded
@@ -1909,8 +1897,8 @@
                 description="Pig HBase libraries for EMR 5.8.0"
                 id="PIG-HBASE-LIB-EMR_5_15_0_LATEST"
                 name="PIG-HBASE-LIB-EMR_5_15_0_LATEST">
-            <library id="hbase-server-1.3.1.jar"/>
-            <library id="hbase-hadoop-compat-1.3.1.jar" />
+            <library id="hbase-server-1.4.4.jar"/>
+            <library id="hbase-hadoop-compat-1.4.4.jar" />
         </libraryNeededGroup>
 
         <!-- HBase group  -->
@@ -1918,9 +1906,9 @@
                 description="HBase libraries for EMR 5.8.0"
                 id="HBASE-LIB-EMR_5_15_0_LATEST"
                 name="HBASE-LIB-EMR_5_15_0_LATEST"  >
-             <library id="hbase-common-1.3.1.jar" />
-             <library id="hbase-client-1.3.1.jar" />
-             <library id="hbase-protocol-1.3.1.jar" />
+             <library id="hbase-common-1.4.4.jar" />
+             <library id="hbase-client-1.4.4.jar" />
+             <library id="hbase-protocol-1.4.4.jar" />
              <library id="hadoop-common-2.8.3-amzn-1.jar" />
              <library id="hadoop-auth-2.8.3-amzn-1.jar" />
              <library id="commons-logging-1.2.jar" />
@@ -1974,14 +1962,14 @@
                 description="Hive HBase libraries for EMR 5.8.0"
                 id="HIVE-HBASE-LIB-EMR_5_15_0_LATEST"
                 name="HIVE-HBASE-LIB-EMR_5_15_0_LATEST">
-            <library id="hbase-common-1.3.1.jar" />
-            <library id="hbase-client-1.3.1.jar" />
-            <library id="hbase-protocol-1.3.1.jar" />
-            <library id="hbase-server-1.3.1.jar" />
-            <library id="hbase-hadoop-compat-1.3.1.jar" />
+            <library id="hbase-common-1.4.4.jar" />
+            <library id="hbase-client-1.4.4.jar" />
+            <library id="hbase-protocol-1.4.4.jar" />
+            <library id="hbase-server-1.4.4.jar" />
+            <library id="hbase-hadoop-compat-1.4.4.jar" />
             <library id="high-scale-lib-1.1.1.jar"/>
             <library id="hive-hbase-handler-2.3.0-amzn-0.jar"/>
-            <library id="netty-all-4.0.23.Final.jar"/>
+            <library id="netty-all-4.1.17.Final.jar"/>
         </libraryNeededGroup>
 
         <!-- Sqoop group -->
@@ -2349,7 +2337,7 @@
       </classloader>
       <classloader
             index="HBASE:AMAZON_EMR:EMR_5_15_0"
-            libraries="hbase-common-1.3.1.jar;hbase-client-1.3.1.jar;hbase-protocol-1.3.1.jar;hadoop-common-2.8.3-amzn-1.jar;hadoop-auth-2.8.3-amzn-1.jar;commons-logging-1.2.jar;commons-codec-1.10.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.10.jar;htrace-core-3.1.0-incubating.jar;guava-14.0.1.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-core-asl-1.9.14-TALEND.jar;netty-all-4.0.43.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;hbase-server-1.3.1.jar;metrics-core-2.2.0.jar;netty-all-4.0.23.Final.jar">
+            libraries="hbase-common-1.4.4.jar;hbase-client-1.4.4.jar;hbase-protocol-1.4.4.jar;hadoop-common-2.8.3-amzn-1.jar;hadoop-auth-2.8.3-amzn-1.jar;commons-logging-1.2.jar;commons-codec-1.10.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.10.jar;htrace-core-3.1.0-incubating.jar;guava-14.0.1.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-core-asl-1.9.14-TALEND.jar;netty-all-4.0.43.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;hbase-server-1.4.4.jar;metrics-core-2.2.0.jar;netty-all-4.1.17.Final.jar">
       </classloader>
     </extension>
 </plugin>
