feat(TBD7208):upgrade pig-0.16.0-amzn-1-core-h2 to pig-0.17.0-core-h2

--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -241,9 +241,9 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="pig-0.16.0-amzn-1-core-h2.jar"
-            name="pig-0.16.0-amzn-1-core-h2.jar"
-            mvn_uri="mvn:org.talend.libraries/pig-0.16.0-amzn-1-core-h2/6.0.0"/>
+            id="pig-0.17.0-core-h2.jar"
+            name="pig-0.17.0-core-h2.jar"
+            mvn_uri="mvn:org.talend.libraries/pig-0.17.0-core-h2/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -1828,7 +1828,7 @@
                 description="The lastest Pig libraries for EMR 5.8.0"
                 id="PIG-LIB-EMR_5_15_0_LATEST"
                 name="PIG-LIB-EMR_5_15_0_LATEST">
-             <library id="pig-0.16.0-amzn-1-core-h2.jar"/>
+             <library id="pig-0.17.0-core-h2.jar"/>
              <library id="hadoop-lzo-0.4.19.jar"/>
              <library id="jline-1.0.jar"/>
              <library id="joda-time-2.9.3.jar"/>
