--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -244,6 +244,12 @@
             id="pig-0.17.0-core-h2.jar"
             name="pig-0.17.0-core-h2.jar"
             mvn_uri="mvn:org.talend.libraries/pig-0.17.0-core-h2/6.0.0"/>
+            
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr5150"
+            id="jython-standalone-2.7.0.jar"
+            name="jython-standalone-2.7.0.jar"
+            mvn_uri="mvn:org.python/jython-standalone/2.7.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -1868,6 +1874,7 @@
              <library id="jline-2.12.jar"/>
              <library id="joda-time-2.9.3.jar"/>
              <library id="automaton-1.11-8.jar"/>
+             <library id="jython-standalone-2.7.0.jar"/>
         </libraryNeededGroup>
 
         <!-- Pig Parquet group -->
