--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -550,6 +550,18 @@
             id="curator-framework-2.7.1.jar"
             name="curator-framework-2.7.1.jar"
             mvn_uri="mvn:org.talend.libraries/curator-framework-2.7.1/6.0.0"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr5150"
+            id="httpclient-4.5.5.jar"
+            name="httpclient-4.5.5.jar"
+            mvn_uri="mvn:org.apache.httpcomponents/httpclient/4.5.5"/>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr5150"
+            id="httpcore-4.4.9.jar"
+            name="httpcore-4.4.9.jar"
+            mvn_uri="mvn:org.apache.httpcomponents/httpcore/4.4.9"/>
         
         <!-- GraphFrames libraries -->
         <libraryNeeded
@@ -1842,6 +1854,8 @@
              <library id="aws-java-sdk-s3-1.11.333.jar"/>
              <library id="hadoop-aws-2.8.3-amzn-1.jar"/>
              <library id="jets3t-0.9.0"/>
+             <library id="httpclient-4.5.5.jar"/>
+             <library id="httpcore-4.4.9.jar"/>
         </libraryNeededGroup>
 
         <!-- Map/Reduce group -->
